# image-ascii-convertor

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
.github/workflows/: dev.yml  feature.yml  prod.yml
.github/workflows/modules/game/lint/: action.yml
cmake/: dependencies.cmake  executable.cmake
cmake/wasm/: compiler.cmake  cpack.cmake
cmake/windows/: cpack.cmake
editor/include/editor/: ascii-preview.hpp  checkbox.hpp  edited-image-preview.hpp  filters-container.hpp  image-container.hpp  image-editor-container.hpp  image-picker.hpp  image.hpp  main-window.hpp  original-image-preview.hpp  slider.hpp  tmp.hpp
editor/include/editor/components/: checkbox.hpp  slider.hpp
editor/src/: ascii-preview.cpp  checkbox.cpp  edited-image-preview.cpp  filters-container.cpp  image-container.cpp  image-editor-container.cpp  image-picker.cpp  image.cpp  main-window.cpp  main.cpp  original-image-preview.cpp  slider.cpp
editor/src/components/: checkbox.cpp  slider.cpp
game/src/: main.cpp
tools/: cmake-build.sh  conan-deploy.sh
